--- a/templates/slots.html
+++ b/templates/slots.html
@@ -17,7 +17,7 @@
     </p>
     <p id="result"></p>
     <p id="prize"></p>
-    <a href="/">INDEX</a>
+    <a href="/kazalo">INDEX</a>
     <script>
         $(document).ready(function() {
             $("#spinButton").click(function() {
