--- a/templates/upperlower.html
+++ b/templates/upperlower.html
@@ -17,7 +17,7 @@
      <p id="result"></p>
      <p id="prize"></p>
  
-     <a href="/">INDEX</a>
+     <a href="/kazalo">INDEX</a>
  
      <script>
          const cardNames = [
