--- a/templates/realslots.html
+++ b/templates/realslots.html
@@ -17,7 +17,7 @@
     </p>
     <p id="result"></p>
     <p id="prize"></p>
-    <a href="/">INDEX</a>
+    <a href="/realkazalo">INDEX</a>
     <script>
         $(document).ready(function() {
             $("#spinButton").click(function() {
