--- a/templates/roleta.html
+++ b/templates/roleta.html
@@ -483,6 +483,7 @@
         </div>
         
         <div class="result hidden" id="result"></div>
+        <a href="/kazalo">INDEX</a>
     </div>
 
     <script>
