--- a/templates/realupperlower.html
+++ b/templates/realupperlower.html
@@ -29,7 +29,7 @@
     <p id="result"></p>
     <p id="prize"></p>
 
-    <a href="/kazalo">INDEX</a>
+    <a href="/realkazalo">INDEX</a>
 
     <script>
         const cardNames = [
